# ru-cdc

./: .gitignore  Cargo.toml  README.md  README_ZH.md
src/: binlog.rs  config.rs  executor.rs  main.rs  message_queue.rs  mysql.rs  position_manager.rs  protocal.rs  statistics.rs
