[package]
name = "ru-cdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
nom = "7.1.3"
thiserror = "1.0.56"
bitflags = "2"
sha1 = "0.10.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
rand = "0.8.4"