[package]
name = "ru-cdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.6"
bytes = "1.5.0"
nom = "7.1.3"
thiserror = "1.0.56"
bitflags = "2"
sha1 = "0.10.5"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
rand = "0.8.4"
dirs = "3.0.2"
rdkafka = { version = "0.33.2", default-features = false, features = ["cmake-build"] }
redis = { version = "0.23", features = ["tokio-comp"] }
hex = "0.4"
byteorder = "1.4.3"
chrono = "0.4"